# 9-practica-pollimorfismosalario-felipe08121

./: CMakeLists.txt  DiagramaUML.md  LiderTecnico.cpp  Tester.cpp  main.cpp
Clases/: DesarrolladorJunior.h  DesarrolladorSenior.h  Empleado.cpp  Empleado.h  LiderTecnico.h  Sistema.cpp
src/: main.cpp
src/Clases/: DesarrolladorJunior.cpp  DesarrolladorSenior.cpp  Sistema.cpp  Sistema.h  Tester.h
